package(default_visibility = ["//visibility:public"])

exports_files(["data/command-descriptions.json"])

DOCS_SITE_SRCS = glob(
    [
        "content/**",
        "data/**",
        "hugo.toml",
        "layouts/**",
        "scripts/**",
        "static/**",
    ],
    allow_empty = True,
    exclude = [
        "content/reference/cli.md",
        "content/reference/standards.md",
        "content/reference/ui-routes.md",
        "content/tools/*.md",
        "public/**",
        "resources/**",
        "static/assets/nortools-logo.png",
        "static/generated/**",
        "static/screenshots/**",
    ],
) + [
    "//:README.md",
    "//:RFC.md",
    "//cli_native:smoke_args",
    "//cli_native:smoke_test_names",
    "//docs:assets/nortools-logo.png",
    "//docs:screenshots",
    "//web:web_portal_source",
]

sh_binary(
    name = "dev",
    srcs = ["scripts/dev.sh"],
    data = DOCS_SITE_SRCS + ["@pnpm//:pnpm"],
)

sh_binary(
    name = "capture_command_output",
    srcs = ["scripts/capture_command_output.sh"],
    data = DOCS_SITE_SRCS + ["@pnpm//:pnpm"],
)

NODE_RUNTIME = "@rules_nodejs//nodejs:current_node_runtime"

POWERSHELL = "powershell.exe -NoProfile -ExecutionPolicy Bypass -File docs-site\\scripts\\bazel-docs.ps1"

BAZEL_DOCS_UNIX = "bash docs-site/scripts/bazel-docs.sh"

genrule(
    name = "generate_reference",
    srcs = DOCS_SITE_SRCS,
    outs = ["generate_reference.marker"],
    cmd = BAZEL_DOCS_UNIX + " --mode generate --output \"$@\" --bindir \"$(BINDIR)\" --node-locations \"$(locations " + NODE_RUNTIME + ")\"",
    cmd_bat = POWERSHELL + " -Mode generate -Output \"$@\" -Bindir \"$(BINDIR)\" -NodeLocations \"$(locations " + NODE_RUNTIME + ")\"",
    tools = [NODE_RUNTIME],
)

genrule(
    name = "check",
    srcs = DOCS_SITE_SRCS,
    outs = ["check.marker"],
    cmd = BAZEL_DOCS_UNIX + " --mode check --output \"$@\" --bindir \"$(BINDIR)\" --node-locations \"$(locations " + NODE_RUNTIME + ")\"",
    cmd_bat = POWERSHELL + " -Mode check -Output \"$@\" -Bindir \"$(BINDIR)\" -NodeLocations \"$(locations " + NODE_RUNTIME + ")\"",
    tools = [NODE_RUNTIME],
)

genrule(
    name = "docs_site",
    srcs = DOCS_SITE_SRCS,
    outs = ["docs_site_public.tar.gz"],
    cmd = BAZEL_DOCS_UNIX + " --mode build --output \"$@\" --bindir \"$(BINDIR)\" --node-locations \"$(locations " + NODE_RUNTIME + ")\"",
    cmd_bat = POWERSHELL + " -Mode build -Output \"$@\" -Bindir \"$(BINDIR)\" -NodeLocations \"$(locations " + NODE_RUNTIME + ")\"",
    tools = [NODE_RUNTIME],
)
