load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
    name = "web_lib",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        "//lib/dns",
        "//lib/network",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_module_jackson_module_kotlin",
        "@maven//:com_google_code_gson_gson",  # kept temporarily to avoid breaking other files that still reference Gson
        "@maven//:dnsjava_dnsjava",
        "@maven//:io_javalin_javalin",
        "@maven//:org_slf4j_slf4j_simple",
    ],
)

java_binary(
    name = "web",
    data = ["//frontend:build"],
    main_class = "no.norrs.nortools.web.WebPortalKt",
    runtime_deps = [":web_lib"],
)

kt_jvm_test(
    name = "web_test",
    srcs = glob(["src/test/kotlin/**/*.kt"]),
    data = [
        "//desktop:graal/reflect-config.json",
        "src/main/kotlin/no/norrs/nortools/web/WebPortal.kt",
    ],
    args = [
        "--select-class=no.norrs.nortools.web.NetworkTraceParsingTest",
        "--select-class=no.norrs.nortools.web.ReflectConfigArchTest",
        "--select-class=no.norrs.nortools.web.WebApiRoutesTest",
        "--select-class=no.norrs.nortools.web.WebApiDeterministicEndpointsTest",
        "--disable-banner",
    ],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    test_class = "no.norrs.nortools.web.NetworkTraceParsingTest",
    runtime_deps = [
        "//desktop:docs_resources",
        "//desktop:frontend_resources",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console_standalone",
    ],
    deps = [
        ":web_lib",
        "@maven//:com_tngtech_archunit_archunit_junit5",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
)
