load(":git_build_info.bzl", "build_data_info", "git_build_info")
load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")

git_build_info(
    name = "git_build_info",
)

build_data_info(
    name = "build_data_info",
    build_target = "//web:web",
    main_class = "no.norrs.nortools.web.WebPortalKt",
)

kt_jvm_library(
    name = "web_lib",
    resources = glob(["src/main/resources/vue/**"]) + [
        ":git_build_info",
        ":build_data_info",
    ],
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        "//lib/dns",
        "//lib/network",
        "//tools/whois/asn",
        "//tools/whois/common",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_module_jackson_module_kotlin",
        "@maven//:com_google_code_gson_gson",  # kept temporarily to avoid breaking other files that still reference Gson
        "@maven//:dnsjava_dnsjava",
        "@maven//:io_javalin_javalin",
        "@maven//:org_webjars_npm_vue",
        "@maven//:org_slf4j_slf4j_simple",
    ],
)

java_binary(
    name = "web",
    main_class = "no.norrs.nortools.web.WebPortalKt",
    stamp = 1,
    runtime_deps = [":web_lib"],
)

kt_jvm_test(
    name = "web_test",
    srcs = glob(["src/test/kotlin/**/*.kt"]),
    data = glob(["src/main/kotlin/no/norrs/nortools/web/*.kt"]) + [
        "//desktop:graal/reflect-config.json",
    ],
    args = [
        "--select-class=no.norrs.nortools.web.NetworkTraceParsingTest",
        "--select-class=no.norrs.nortools.web.NetworkInterfacesLinuxParsingTest",
        "--select-class=no.norrs.nortools.web.ReflectConfigArchTest",
        "--select-class=no.norrs.nortools.web.WebApiRoutesTest",
        "--select-class=no.norrs.nortools.web.WebApiDeterministicEndpointsTest",
        "--select-class=no.norrs.nortools.web.UpdaterSerializationTest",
        "--disable-banner",
    ],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    test_class = "no.norrs.nortools.web.NetworkTraceParsingTest",
    runtime_deps = [
        "//desktop:docs_resources",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console_standalone",
    ],
    deps = [
        ":web_lib",
        "@maven//:build_krema_krema_core",
        "@maven//:com_tngtech_archunit_archunit_junit5",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
)

kt_jvm_library(
    name = "web_arch_test_lib",
    srcs = ["src/test/kotlin/no/norrs/nortools/web/ReflectConfigArchTest.kt"],
    deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
)

java_test(
    name = "web_arch_test",
    srcs = [],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    test_class = "org.junit.platform.console.ConsoleLauncher",
    args = [
        "--select-class=no.norrs.nortools.web.ReflectConfigArchTest",
        "--disable-banner",
    ],
    data = glob(["src/main/kotlin/no/norrs/nortools/web/*.kt"]) + [
        "//desktop:graal/reflect-config.json",
    ],
    runtime_deps = [
        ":web_arch_test_lib",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console_standalone",
    ],
)

kt_jvm_library(
    name = "web_updater_serialization_test_lib",
    srcs = ["src/test/kotlin/no/norrs/nortools/web/UpdaterSerializationTest.kt"],
    deps = [
        "@maven//:build_krema_krema_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
)

java_test(
    name = "web_updater_serialization_test",
    srcs = [],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    test_class = "org.junit.platform.console.ConsoleLauncher",
    args = [
        "--select-class=no.norrs.nortools.web.UpdaterSerializationTest",
        "--disable-banner",
    ],
    data = [
        "//desktop:graal/reflect-config.json",
    ],
    runtime_deps = [
        ":web_updater_serialization_test_lib",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console_standalone",
    ],
)
