"""Export all source files for vite build."""

load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")

copy_to_bin(
    name = "src",
    srcs = glob(
        [
            "**/*.css",
            "**/*.svg",
            "**/*.ts",
            "**/*.vue",
        ],
        allow_empty = True,
    ),
    visibility = ["//frontend:__pkg__"],
)

