load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "cli",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    resources = ["//docs-site:data/command-descriptions.json"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/dns",
        "//lib/output",
        "@maven//:com_github_ajalt_clikt_clikt_jvm",
        "@maven//:com_google_code_gson_gson",
    ],
)
