load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
    name = "dns",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_google_code_gson_gson",
        "@maven//:dnsjava_dnsjava",
        "@maven//:net_java_dev_jna_jna",
        "@maven//:net_java_dev_jna_jna_platform",
    ],
)

kt_jvm_test(
    name = "dns_test",
    srcs = glob(["src/test/kotlin/**/*.kt"]),
    args = [
        "--select-class=no.norrs.nortools.lib.dns.DnsModelsTest",
        "--select-class=no.norrs.nortools.lib.dns.DnsResolverWindowsConfigTest",
        "--disable-banner",
    ],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    test_class = "no.norrs.nortools.lib.dns.DnsModelsTest",
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console_standalone",
    ],
    deps = [
        ":dns",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
)
