load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")

kt_jvm_binary(
    name = "txt",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    main_class = "no.norrs.nortools.tools.dns.txt.TxtLookupKt",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/cli",
        "//lib/dns",
        "//lib/output",
        "@maven//:com_github_ajalt_clikt_clikt_jvm",
    ],
)
